# systemy

./: INSTALL  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac  main.c  obj.c  obj.h  pola.c  pola.h
autom4te.cache/: output.1  requests  traces.0  traces.1
